hphp/hack/test/typecheck/reified_generics/reified_this.php
<?hh
class R<reify T> {}

class C {
    const type T = int;
    public function f(
        R<this> $r,
        R<this::T>$rt
    ): void {}
}
